static/styles/portico/portico.css
/* ... */
.darker-background {
    background-color: hsl(0, 0%, 28%);
    color: hsl(0, 0%, 100%);
}

.alert-hidden {
    display: none;
}

label.text-error {
    display: inline;

    padding-left: 5px;
}

input.text-error {
    border-color: hsl(0, 100%, 50%);
    outline-color: hsl(0, 100%, 50%);
}

.portico-container {
    position: relative;

    .if-zulip-electron {
        display: none;
    }
}

/* detect if the platform is `ZulipDesktop` and if so, hide this tag! */
.portico-container[data-platform="ZulipElectron"] .if-zulip-electron {
    display: block;
}

/* -- new footer -- */
.footer {
    margin: 0;
    z-index: 100;
    width: calc(100%);
    text-align: center;
    font-size: 16px;
    background-color: hsl(33, 34%, 96%);
    display: grid;
    grid-template-columns: repeat(4, max-content);
    justify-content: center;
    padding-top: 50px;
    padding-bottom: 50px;

    .footer-navigation {
        margin-left: 0;
        margin-right: 0;
    }

    a {
        color: inherit !important;
    }

    .footer-section {
        margin: 0 20px;
        max-width: max-content;
        vertical-align: top;
        text-align: left;

        h3 {
            text-transform: uppercase;
            font-size: 1em;
            font-weight: 600;
            line-height: 1.2;
            margin-bottom: 5px;
        }

        ul {
            color: hsl(0, 0%, 40%);
            list-style-type: none;
            margin-left: 0;
            font-weight: 400;
        }
    }
}

/* -- end new footer -- */

.header-main {
    .logo {
        display: block;
        text-decoration: none;
        position: relative;
        line-height: 0.8;

        svg {
            vertical-align: -5px;
        }

        a,
        a:focus,
        a:hover {
            text-decoration: none;
            color: hsl(0, 0%, 20%);
        }

        .light {
            font-size: 1.2rem;
            font-weight: 400;
            color: hsl(0, 0%, 20%);
            opacity: 0.7;
        }
    }

    .portico-logo {
        height: 28px;
        width: auto;
        padding: 6px 0 6px 0;
    }
}

.portico-header {
    .dropdown {
        position: relative;
        display: inline-block;

        ul {
            display: none;
            position: absolute;
            right: 0;
            margin: 10px 0 0 0;
            list-style-type: none;
            width: 300px;
            background-color: hsl(0, 0%, 100%);
            padding: 5px 0;
            border-radius: 4px;
            border: 1px solid hsl(0, 0%, 87%);
            box-shadow: 0 2px 5px hsla(0, 0%, 0%, 0.1);

            &::before {
                content: "\25B2";
                position: absolute;
                top: -4px;
                right: 9px;
                font-size: 0.5em;
                color: hsl(0, 0%, 87%);
                line-height: 0;
                transform: scale(1.8, 1);
            }

            li {
                display: list-item;
                margin: 0;
                padding: 3px 10px;
                text-align: left;
                opacity: 1;
                cursor: pointer;

                &:hover {
                    background-color: hsl(190, 10%, 90%);
                    transition: none;
                }

                a {
                    display: block;
                    margin: 2px 0;
                    padding: 0;
                    transition: none;
                    font-size: 0.9em;
                    font-weight: 400;
                    color: hsl(0, 0%, 27%);
                }

                &:hover a {
                    background-color: transparent;
                }

                a i {
                    margin-right: 5px;
                }

                &.nav-header {
                    background-color: transparent;
                    cursor: default;
                    font-size: 14px;
                }
            }

            &.dropdown-list {
                margin-top: 3px;
                margin-right: 3px;
            }
        }

        &.show ul {
            display: block;
        }
    }

    .dropdown-pill {
        border: 1px solid hsla(0, 0%, 0%, 0.2);
        border-radius: 4px;
        margin-left: 10px;
        font-weight: 400;
        cursor: pointer;

        .realm-name {
            display: inline-block;
            vertical-align: top;
            margin: 0 5px 0 -4px;
            padding: 1px 0 1px 5px;
            font-size: 0.9em;
            font-weight: 600;
            line-height: 1.6;
        }

        .realm-name i.fa {
            position: relative;
            top: -2px;
            font-size: 0.6em;
            margin-left: 5px;
            opacity: 0.5;
            transition: all 0.2s ease;
        }

        &:hover .realm-name i.fa {
            opacity: 1;
        }

        .header-realm-icon {
            width: 26px;
            height: 26px;
            vertical-align: top;
            border-radius: 4px;
        }
    }
}

.portico-page-container .portico-header .dropdown-pill .realm-name {
    margin-left: -3px;
}

.app {
    width: 100%;
    z-index: 99;
}

.main-headline {
    background: url(../../images/landing-page/gg.jpg);
    background-position: center;
    background-size: cover;
}

a.bottom-signup-button {
    color: hsl(0, 0%, 100%) !important;
    text-decoration: none !important;
    font-size: 20px;
    padding: 20px;
    margin-top: 30px;
    margin-bottom: 30px;
    font-weight: 300;
}

.signup-signature {
    margin-top: 20px;
    padding-bottom: 50px;
}

.devlogin_subheader {
    margin-top: 10px;
    margin-bottom: 20px;
    padding-top: 0;
    text-align: center;
    font-size: 16px;
}

.portico-large-text {
    font-size: 16px;
    line-height: 20px;
}

.portico-secondary-header {
    font-weight: 300;
    font-size: 25px;
}

.table.table-striped {
    background-color: hsl(0, 0%, 100%);
    box-shadow: 0 0 4px hsla(0, 0%, 0%, 0.1);
}
/* ... */

